# EcoAhorro-Scrapers

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-dolar.yml  etl.yml  price-history-aggregator.yml
config/: supermercados_config.json
data/: catalogo_productos_viejo.csv  consolidado_precios.csv  tabla_maestra.csv  test_upload.csv
data_base/: catalogo_actualizado.csv  catalogo_productos.csv  categorias.csv
ean_mapping/: eanGeneralMapping.py  eanScrappingCoope.py  mapeoCoopeParalelo.py
etl/: run.py  shared.py  step_catalog.py  step_consolidate.py  step_master.py  step_upload.py
etl/scrape/: base.py  (+2 more)
legacy/: README.md
price_scrapping/: run_all_scrapers.py
product_searching/: carrefourProductsSearching.py  preciosClarosProductsSearching.js
products_searching/: carrefourProductsSearching.py  changoMasProductsSearching.py  laBanderitaProductsSearching.py  preciosClarosProductsSearching.js  veaProductsSearching.py
scrapers/: run_all_scrapers.py
tests/: test_consolidar_precios.py  test_ean_utils.py  test_normalizar_catalogo.py  test_shared.py  test_step_catalog.py  test_step_consolidate.py  test_step_master.py  test_tabla_maestra.py
utilidades/: agregarImagenesACatalogo.py  buscarProductosQueEstanEnLaCoope.py  ean_utils.py  ejecutar_etl.py  filtrarEncontrados.py  filtrarSoloEansValidos.py  normalizar_catalogo.py  reemplazarCodigoCoopePorEan.py  tabla_maestra.py  unificadorCatalogos.py
utilities/: agregarImagenesACatalogo.py  buscarProductosQueEstanEnLaCoope.py  filtrarEncontrados.py  reemplazarCodigoCoopePorEan.py
(+64 files in other folders)
